# ucvla

./: .gitignore  PROXY_PLAN.md  datasets.py  notes  pyproject.toml  zarr_loader.py
configs/: dp_pretrain.yaml  dp_ucvla.yaml
data/: mug_handover_webdataset  umi_normalizer.pt
models/: bias.py  clip_encoder.py
models/dp/: model.py  runner.py
notebooks/: preference_viz.ipynb
scripts/: compute_chunk_weights.py  eval_confusion.py  eval_confusion.sh  eval_divergence.py  eval_divergence.sh  pretrain.py  pretrain.sh  train.py  train.sh  visualize_preferences.py  zarr_to_webdataset.py
trajectory/: __init__.py  dtw.py  preference.py
